--- a/src/components/transactions/TransactionsList/TransactionsList.module.css
+++ b/src/components/transactions/TransactionsList/TransactionsList.module.css
@@ -23,16 +23,27 @@
   border-radius: 10px;
 }
 
-@media (min-width: 768px) {
+.moreBtn {
+  background: var(--hover-color);
+  border: none;
+  border-radius: 8px;
+  padding: 12px;
+  color: var(--hover-text-color);
+  font-weight: 500;
+}
+
+@media screen and (min-width: 768px) {
   .section {
     background: transparent;
     background: var(--hover-color);
     border-radius: 16px;
-    overflow: hidden;
+    /* overflow: hidden; */
     padding: 32px 0 0 16px;
     justify-content: center;
     min-height: 538px;
-    width: fit-content;
+    width: 100%;
+    margin: 0 auto;
+    padding-bottom: 16px;
   }
 
   .placeholder {
@@ -69,6 +80,8 @@
     max-height: 538px;
     padding-right: 10px;
     scroll-behavior: smooth;
+
+    /* max-height: none; */
   }
 
   .date {
@@ -90,26 +103,45 @@
     background: #508f8c;
     border-radius: 64px;
   }
+
+  .moreBtn {
+    background: none;
+    background-color: var(--modal-background);
+    color: var(--text-color);
+    transition: all 0.3s ease;
+  }
+
+  .moreBtn:hover {
+    background-color: none;
+    background: var(--main-background-color);
+    color: var(--hover-text-color);
+  }
 }
 
-@media (min-width: 1280px) {
+@media screen and (min-width: 1280px) {
   .header {
     grid-template-columns: 121px 95px 125px 142px 1fr;
   }
 
   .section {
-    height: 585px;
+    max-height: 585px;
     padding-right: 10px;
     padding-left: 27px;
+    padding-bottom: 36px;
+
+    /* overflow: hidden; */
   }
   .list {
     padding-right: 18px;
+    min-height: unset;
+    max-height: 500px;
   }
 
   .placeholder {
     min-width: 757px;
+    min-height: auto;
     /* background: var(--hover-color); */
-    min-height: 585px;
+    /* min-height: 585px; */
     /* border-radius: 16px; */
   }
 }
